--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,37 @@
 ---
-title: Introduction
-description: 'Welcome to the home of your new documentation'
+title: ברוכים הבאים
+description: "פה תמצאו הסבר לכל שאלה או פעולה שתרצו לבצע במערכת"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
+<div dir="rtl">
+  <img
+    className="block dark:hidden"
+    src="/images/hero.png"
+    alt="Hero Light"
+  />
+  <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
+   src="/images/hero.png"
   alt="Hero Dark"
 />
 
-## Setting up
+ברוכים הבאים למערכת נדלניטור!
+המערכת שלנו תוכננה כדי להקל עליך בניהול נכסיך, לחסוך זמן ומשאבים, ולהבטיח שהכל יתנהל בצורה חלקה ויעילה.
 
-The first step to world-class documentation is setting up your editing environments.
+## איך מתחילים?
+
+בעמוד זה תמצאו את כל ההסברים וההנחיות לשימוש במערכת נדלניטור. אם יש לך שאלה או אם אתה מעוניין לבצע פעולה כלשהי במערכת, הגעת למקום הנכון. כאן תמצאו מדריכים מפורטים, תשובות לשאלות נפוצות, וטיפים לשימוש יעיל במערכת.
+
+הגדרות והתחלה
+הצעד הראשון לשימוש במערכת נדלניטור הוא הגדרת הפרופיל והנכסים שלך:
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
+  <Card title="הרשמה למערכת" icon="user-cog" href="/registration">
+    למדו כיצד להרשם למערכת ומה האפשרויות העומדות בפניכם
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
+  <Card title="סוגי משתמשים" icon="user" href="/userTypes">
+    למדו איך להתאים את המערכת לצרכים המדויקים שלכם
   </Card>
 </CardGroup>
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+</div>
