--- a/essentials/navigation.mdx
+++ b/essentials/navigation.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Navigation'
-description: 'The navigation field in mint.json defines the pages that go in the navigation menu'
-icon: 'map'
+title: "Navigation"
+description: "The navigation field in mint.json defines the pages that go in the navigation menu"
+icon: "map"
 ---
 
 The navigation menu is the list of links on every website.
@@ -18,7 +18,7 @@ Our navigation syntax is recursive which means you can make nested navigation gr
 "navigation": [
     {
         "group": "Getting Started",
-        "pages": ["quickstart"]
+        "pages": ["registration"]
     }
 ]
 ```
@@ -28,7 +28,7 @@ Our navigation syntax is recursive which means you can make nested navigation gr
     {
         "group": "Getting Started",
         "pages": [
-            "quickstart",
+            "registration",
             {
                 "group": "Nested Reference Pages",
                 "pages": ["nested-reference-page"]
